# ticket_hub

./: Cargo.toml  tickethub.db
src/: frontend.html  main.rs
